Added SDL submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 # Minimum CMake Version Required
 cmake_minimum_required(VERSION 3.16)
 
+# Add SDL3 to Project
+add_subdirectory(vendor/SDL EXCLUDE_FROM_ALL)
+
 # Project Name and Version
 project(citygloom VERSION 0.0.0.1)
 
@@ -14,6 +17,10 @@ set(CMAKE_CXX_STANDARD_REQURIED True)
 
 # Include Directories for Headers (including libraries from the libs folder)
 include_directories(include)
+
+find_package(SDL3 CONFIG REQUIRED)
+
+target_link_libraries(main PRIVATE SDL3::SDL3)
 
 # Add Source Files
 file(GLOB_RECURSE SRC_FILES src/*.cpp include/*.h)
