--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,13 +18,10 @@ set(CMAKE_CXX_STANDARD_REQURIED True)
 # Include Directories for Headers (including libraries from the libs folder)
 include_directories(include)
 
-find_package(SDL3 CONFIG REQUIRED)
-
-target_link_libraries(main PRIVATE SDL3::SDL3)
-
 # Add Source Files
 file(GLOB_RECURSE SRC_FILES src/*.cpp include/*.h)
 
 # Add the Executable
 add_executable(citygloom ${SRC_FILES})
 
+target_link_libraries(citygloom PRIVATE SDL3::SDL3)
